--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,7 +58,7 @@ jobs:
         sudo apt install mxe-i686-w64-mingw32.static-cairo mxe-i686-w64-mingw32.static-curl mxe-i686-w64-mingw32.static-freetype mxe-i686-w64-mingw32.static-glib mxe-i686-w64-mingw32.static-hunspell mxe-i686-w64-mingw32.static-jpeg mxe-i686-w64-mingw32.static-lcms mxe-i686-w64-mingw32.static-libpng mxe-i686-w64-mingw32.static-libwebp mxe-i686-w64-mingw32.static-lua mxe-i686-w64-mingw32.static-openjpeg mxe-i686-w64-mingw32.static-qtbase mxe-i686-w64-mingw32.static-qtscript mxe-i686-w64-mingw32.static-qttools mxe-i686-w64-mingw32.static-tiff mxe-i686-w64-mingw32.static-zlib
 
     - name: Configure
-      run: ${MXEDIR}/usr/bin/${MXETARGET}-cmake -B build -DTW_BUILD_ID='github' -DTEXWORKS_ADDITIONAL_LIBS='shlwapi' -DCMAKE_INSTALL_PREFIX=install
+      run: mkdir build && cd build && ${MXEDIR}/usr/bin/${MXETARGET}-cmake -DTW_BUILD_ID='github' -DCMAKE_INSTALL_PREFIX=install ..
 
     - name: Build
       run: ${MXEDIR}/usr/bin/${MXETARGET}-cmake --build build --parallel
