--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -116,13 +116,13 @@ jobs:
       run: msys2do pacman --noconfirm -S git mingw-w64-x86_64-cmake mingw-w64-x86_64-make mingw-w64-x86_64-gcc mingw-w64-x86_64-diffutils mingw-w64-x86_64-qt5 mingw-w64-x86_64-poppler mingw-w64-x86_64-hunspell mingw-w64-x86_64-lua
 #      run: msys2do pacman --noconfirm -S mingw-w64-x86_64-cmake mingw-w64-x86_64-make
 
-    - run: msys2do find /usr/bin
-    - run: msys2do find / -iname Qt5Core.dll
-    - run: msys2do find / -iname libgcc_s_seh-1.dll
-    - run: msys2do find / -iname libhunspell-1.7-0.dll
-    - run: msys2do find / -iname libpoppler-qt5-1.dll
-    - run: msys2do find / -iname libstdc++-6.dll
-    - run: msys2do find / -iname zlib1.dll
+    - run: msys2do find /mingw64/bin
+#    - run: msys2do find / -iname Qt5Core.dll
+#    - run: msys2do find / -iname libgcc_s_seh-1.dll
+#    - run: msys2do find / -iname libhunspell-1.7-0.dll
+#    - run: msys2do find / -iname libpoppler-qt5-1.dll
+#    - run: msys2do find / -iname libstdc++-6.dll
+#    - run: msys2do find / -iname zlib1.dll
 
     - name: Update Git Revision Info
       run: msys2do ./getGitRevInfo.sh
