--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,9 +58,6 @@ jobs:
         sudo apt install mxe-i686-w64-mingw32.static-cairo mxe-i686-w64-mingw32.static-curl mxe-i686-w64-mingw32.static-freetype mxe-i686-w64-mingw32.static-glib mxe-i686-w64-mingw32.static-hunspell mxe-i686-w64-mingw32.static-jpeg mxe-i686-w64-mingw32.static-lcms mxe-i686-w64-mingw32.static-libpng mxe-i686-w64-mingw32.static-libwebp mxe-i686-w64-mingw32.static-lua mxe-i686-w64-mingw32.static-openjpeg mxe-i686-w64-mingw32.static-poppler mxe-i686-w64-mingw32.static-qtbase mxe-i686-w64-mingw32.static-qtscript mxe-i686-w64-mingw32.static-qttools mxe-i686-w64-mingw32.static-tiff mxe-i686-w64-mingw32.static-zlib
       # FIXME: Build poppler (it changes too often)
 
-    - name: Update Git Revision Info
-      run: ./getGitRevInfo.sh
-
     - name: Configure
       run: mkdir build && cd build && ${MXEDIR}/usr/bin/${MXETARGET}-cmake -DTW_BUILD_ID='github' -DCMAKE_INSTALL_PREFIX=install -DPLATFORM_DEPENDENCIES='freetype;harfbuzz_too;freetype;bz2' -DPoppler_ADDITIONAL_DEPENDENCIES='freetype;harfbuzz;freetype_too;glib-2.0;intl;iconv;ws2_32;winmm;tiff;webp;jpeg;openjp2;png;lcms2;lzma;bz2;pcre16;wtsapi32' -DTEXWORKS_ADDITIONAL_LIBS='wtsapi32;opengl32;imm32;shlwapi;dwmapi;uxtheme' ..
 
@@ -132,8 +129,8 @@ jobs:
     - run: msys2do pacman -Ss poppler
 
     - name: Install dependencies
-      # git, diffutils are needed by getGitRevInfo.sh
-      run: msys2do pacman --noconfirm -S git mingw-w64-x86_64-cmake mingw-w64-x86_64-make mingw-w64-x86_64-gcc mingw-w64-x86_64-diffutils mingw-w64-x86_64-qt5 mingw-w64-x86_64-poppler mingw-w64-x86_64-hunspell mingw-w64-x86_64-lua
+      # git is needed for getting git revision information
+      run: msys2do pacman --noconfirm -S git mingw-w64-x86_64-cmake mingw-w64-x86_64-make mingw-w64-x86_64-gcc mingw-w64-x86_64-qt5 mingw-w64-x86_64-poppler mingw-w64-x86_64-hunspell mingw-w64-x86_64-lua
 #      run: msys2do pacman --noconfirm -S mingw-w64-x86_64-cmake mingw-w64-x86_64-make
 
     - run: msys2do find /mingw64/bin
@@ -143,9 +140,6 @@ jobs:
 #    - run: msys2do find / -iname libpoppler-qt5-1.dll
 #    - run: msys2do find / -iname libstdc++-6.dll
 #    - run: msys2do find / -iname zlib1.dll
-
-    - name: Update Git Revision Info
-      run: msys2do ./getGitRevInfo.sh
 
     - name: Configure
 # FIXME: Replace hardcoded path
