--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     name: Build on Linux
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-#    if: false
+    if: false
 
     steps:
     - name: Checkout
@@ -43,6 +43,7 @@ jobs:
   build-mxe:
     name: Build for Windows (MXE)
     runs-on: ubuntu-latest
+    if: false
     env:
       MXEDIR: /usr/lib/mxe
       MXETARGET: i686-w64-mingw32.static
@@ -140,6 +141,7 @@ jobs:
   build-win:
     name: Build on Windows
     runs-on: windows-latest
+    if: false
 #    defaults:
 #      run:
 #        shell: bash
@@ -223,7 +225,7 @@ jobs:
   build-macosx:
     name: Build on Mac OS X
     runs-on: macos-latest
-#    if: false
+    if: false
 
     steps:
     - name: Checkout
