--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -98,7 +98,7 @@ jobs:
     - name: Install Dependencies
       run: |
         sudo apt update -y
-        sudo apt install -y gcc-6 zlib1g-dev liblua5.3-dev xvfb
+        sudo apt install -y g++-6 zlib1g-dev liblua5.3-dev xvfb
 
     - name: Install Qt
       uses: jurplel/install-qt-action@v2
