--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -111,7 +111,7 @@ jobs:
         wget https://downloads.sourceforge.net/project/hunspell/Hunspell/1.2.8/hunspell-1.2.8.tar.gz
         tar -xvf hunspell-1.2.8.tar.gz
         cd hunspell-1.2.8
-        CXXFLAGS="-fpermissive" ./configure
+        ./configure
         make
         sudo make install
 
