--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -140,6 +140,9 @@ jobs:
       run: make -j
       working-directory: build
 
+    - run: ldd texworks
+      working-directory: build
+
     - name: Test
       run: LD_LIBRARY_PATH="/usr/local/lib:${Qt5_DIR}:${Qt5_DIR}/lib:${Qt5_DIR}/plugins:${Qt5_DIR}/plugins/platforms:${LD_LIBRARY_PATH}" xvfb-run ctest -V
       working-directory: build
