--- a/.github/actions/setup-windows/action.yml
+++ b/.github/actions/setup-windows/action.yml
@@ -18,8 +18,7 @@ runs:
         #  mxe-x86-64-w64-mingw32.static-cairo mxe-x86-64-w64-mingw32.static-curl mxe-x86-64-w64-mingw32.static-freetype mxe-x86-64-w64-mingw32.static-glib mxe-x86-64-w64-mingw32.static-hunspell mxe-x86-64-w64-mingw32.static-jpeg mxe-x86-64-w64-mingw32.static-lcms mxe-x86-64-w64-mingw32.static-libpng mxe-x86-64-w64-mingw32.static-libwebp mxe-x86-64-w64-mingw32.static-lua mxe-x86-64-w64-mingw32.static-openjpeg mxe-x86-64-w64-mingw32.static-qtbase mxe-x86-64-w64-mingw32.static-qtdeclarative mxe-x86-64-w64-mingw32.static-qtscript mxe-x86-64-w64-mingw32.static-qttools mxe-x86-64-w64-mingw32.static-tiff mxe-x86-64-w64-mingw32.static-zlib
         #time sudo chmod --recursive a+w /usr/lib/mxe
         #time rm -f "/usr/lib/mxe/usr/x86_64-w64-mingw32.static/share/cmake/mxe-conf.d/ccache.cmake"
-        wget -v || true
-        curl -v || true
+        sudo apt install make
         wget -O /tmp/mxe-texworks.tar.xz https://github.com/stloeffler/mxe/releases/latest/download/mxe-texworks.tar.xz
         sudo mkdir -p /usr/lib/mxe
         tar -C /usr/lib/mxe --xz -xf /tmp/mxe-texworks.tar.xz
